added one more question to the IR lab

--- a/Lab_3_IR_Spectra/IR Analysis.ipynb
+++ b/Lab_3_IR_Spectra/IR Analysis.ipynb
@@ -457,7 +457,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question 5: How many vibrational degrees of freedom does water have?  How many rotational degrees of freedom does water have?  How many translational degrees of freedom does water have?"
+    "#### Question 5: How many vibrational degrees of freedom does water have?  How many rotational degrees of freedom does water have?  How many translational degrees of freedom does water have?\n",
+    "\n",
+    "#### Question 6: Compare the calculated frequencies to the experimentally determined IR frequencies for water"
    ]
   },
   {
