--- a/Lab_3_IR_Spectra/IR_Analysis.ipynb
+++ b/Lab_3_IR_Spectra/IR_Analysis.ipynb
@@ -459,7 +459,7 @@
    "source": [
     "#### Question 5: How many vibrational degrees of freedom does water have?  How many rotational degrees of freedom does water have?  How many translational degrees of freedom does water have?\n",
     "\n",
-    "#### Question 6: Compare the calculated frequencies to the experimentally determined IR frequencies for water"
+    "#### Question 6: Compare the calculated frequencies to the experimentally determined IR frequencies for water.  Comment on any approximations that have been introduced into the water calculations."
    ]
   },
   {
